--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "gw2treasures/gw2api": "^2.4",
+        "gw2treasures/gw2api": "3.2.0",
         "katzgrau/klogger": "dev-master"
     },
     "autoload": {
