--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "vennekilde/gw2integration",
     "description": "Description of project GW2 Website API Integration.",
-    "version": "4.0.1",
+    "version": "4.0.3",
     "authors": [
         {
             "name": "Jeppe Boysen Vennekilde",
@@ -10,7 +10,8 @@
     ],
     "require": {
         "gw2treasures/gw2api": "3.2.0",
-        "katzgrau/klogger": "dev-master"
+        "katzgrau/klogger": "dev-master",
+        "illuminate/database": "5.4.*"
     },
     "autoload": {
         "psr-4": {
