--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "vennekilde/gw2integration",
     "description": "Description of project GW2 Website API Integration.",
-    "version": "4.0.4",
+    "version": "4.0.5",
     "authors": [
         {
             "name": "Jeppe Boysen Vennekilde",
@@ -11,6 +11,7 @@
     "require": {
         "gw2treasures/gw2api": "3.2.0",
         "katzgrau/klogger": "dev-master",
+        "golonka/bbcodeparser": "^2.2",
         "illuminate/database": "5.4.*"
     },
     "autoload": {
