--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "require": {
         "gw2treasures/gw2api": "3.2.0",
         "katzgrau/klogger": "dev-master",
-        "illuminate/database": "5.4.*"
+        "illuminate/database": "5.4.*",
+        "team-reflex/oauth2-discord": "dev-master"
     },
     "autoload": {
         "psr-4": {
